# TGbot_flask

./: .gitignore  README.md  bot.py  bot_history.db  config.py  db.py  main.py  models.py  openai_service.py  pyproject.toml  requirements.txt  server.py
templates/: bot_message.txt  system_prompt.txt  welcome_message.txt
