[tool.poetry]
name = "tgbot-flask"
version = "0.1.0"
description = ""
authors = ["Viacheus <glorianfox@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
telegram = "^0.0.1"
python-telegram-bot = "^22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
