[tool.poetry]
name = "tgbot-flask"
version = "0.1.0"
description = ""
authors = ["Viacheus <glorianfox@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
telegram = "^0.0.1"
python-telegram-bot = "^22.0"
python-dotenv = "^1.1.0"
openai = "^1.78.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
